--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pogaca-nerede-kart-oyunu",
   "description": "Poğaça Nerede Kart Tahmin Oyunu | Vue.JS",
   "version": "1.0.0",
-  "author": "gkandemi <gokhan@gkandemir.com>",
+  "author": "ardansisman <ardann.68@gmail.com>",
   "license": "MIT",
   "private": true,
   "scripts": {
